--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,26 @@
   "description": "",
   "main": "/build/src/server.js",
   "scripts": {
+    "dev": "nodemon src/server.ts --watch",
     "lint": "eslint src --ext .ts,.tsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.3"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/express": "^4.17.21",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.11.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
 }
