--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "typescript": "^5"
