--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-PORT=3003
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgres://default:a2OgzyG1jWSL@ep-sparkling-forest-a42ymh7g.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+
+PORT=3001
