--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./build/server.js",
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "nodemon src/server.ts --watch",
     "prod": "tsc && node .",
     "lint": "eslint src --ext .ts,.tsx"
