--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
